# flash

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  analysis.py  config.json  config.py  de_en.rdf  de_en.rq  fields.ttl  hi.py  pyproject.toml  requirements.txt  shapesGraph.ttl  tmp.txt  uppercase.rdf  uppercase.rq
adapter/: __init__.py  graph.py  note.py
flash/: __init__.py  core.py  de_en.rq
flash/ts/: esbuild.config.js  package.json
flash/ts/src/: editor.ts
flash/user_files/: config.ttl
ts/src/: Edit.svelte  Generate.svelte  StrikeThrough.svelte  editor.ts
web/: editor.js
