[tool.poetry]
name = "myankiplugin"
version = "0.1.0"
description = ""
authors = ["veyndan <veyndan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.910"
aqt = "^2.1.49"
PyQt5-stubs = "^5.15.2"
rdflib = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
